--- a/templates/index.html
+++ b/templates/index.html
@@ -24,9 +24,11 @@
                         <div class="profile-dropdown">
                             <div class="dropdown-header">
                                 <div class="user-info">
+                                    <a href="{{ url_for('profile') }}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 24 24" fill="currentColor">
                                         <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"/>
                                     </svg>
+                                Profile</a>
                                     <span>{{ current_user.username if current_user.is_authenticated else 'Guest' }}</span>
                                 </div>
                             </div>
